fixed layout on mobile

--- a/src/app/home-components/experience-intro/experience/experience-animation/experienceAnimation.module.scss
+++ b/src/app/home-components/experience-intro/experience/experience-animation/experienceAnimation.module.scss
@@ -10,6 +10,7 @@
     width: 100%;
     
     @media(max-width: 800px) {
+        margin-top: 7vh;
         background-color: rgba(var(--clr-main-3));
         position: fixed;
         z-index: 10;
