--- a/src/app/home-components/experience-intro/experience/resume/resume.module.scss
+++ b/src/app/home-components/experience-intro/experience/resume/resume.module.scss
@@ -8,7 +8,7 @@
   
   @media (max-width: 800px) {
     width: 90%;
-    margin-top: 30vh;
+    // margin-top: 30vh;
     
     margin-inline: auto;
     padding-right: 0rem;
